<resources>
    <string name="app_name">Toy App</string>
    <string name="search">Search</string>
    <string name="error_message">Failed to get results. Please try again.</string>
    <string name="action_reset">Reset</string>

    <string name="visualizer_settings">Settings</string>

    <string name="show_bass_off">Hidden</string>
    <string name="show_bass_on">Shown</string>
    <string name="show_bass_title">Show Bass</string>

    <string name="show_mid_off">Hidden</string>
    <string name="show_mid_on">Shown</string>
    <string name="show_mid_title">Show Mid</string>

    <string name="show_treble_off">Hidden</string>
    <string name="show_treble_on">Shown</string>
    <string name="show_treble_title">Show Treble</string>

    <string name="pref_color_label">Shape Color</string>
    <string name="pref_color_label_red">Red</string>
    <string name="pref_color_label_blue">Blue</string>
    <string name="pref_color_label_green">Green</string>

    <string name="pref_size_label">Size Multiplier</string>

    <string name="error_size">Please select a number between %1$s and %2$s</string>

    <string name="show_definition">Show Definition</string>
    <string name="next_word">Next Word</string>

    <string name="add_task_activity_name">Add a New Task</string>

    <!-- Strings for MainActivity -->
    <string name="priority_1">1</string>
    <string name="priority_2">2</string>
    <string name="priority_3">3</string>

    <!-- Strings for AddTaskActivity -->
    <!-- This etaskEntrytask has a unicode character for "..." = "&#8230;" -->
    <string name="edit_task_description">Describe your taskEntry&#8230;</string>
    <string name="priority_string">Priority</string>

    <string name="high_priority">High</string>
    <string name="med_priority">Medium</string>
    <string name="low_priority">Low</string>

    <string name="add_button">Add</string>
    <string name="update_button">Update</string>

    <string name="instructions">Press the glass of water after you\'ve hydrated.</string>
    <string name="water_increment_content_desc">Press to record drinking water</string>
    <string name="charging_plug_content_desc">charging plug image</string>
    <string name="default_water_count">0</string>
    <string name="default_charge_notification_count">Hydrate while charging reminder sent 0 times</string>
    <string name="water_chug_toast">GLUG GLUG GLUG</string>
    <string name="charging_reminder_notification_title">Device Charging - Where\'s that water?</string>
    <string name="charging_reminder_notification_body">There\'s never a better time to drink water than when you know your phone is charging. Drink up!</string>
    <plurals name="charge_notification_count">
        <item quantity="zero">Hydrate while charging reminder sent %d times</item>
        <item quantity="one">Hydrate while charging reminder sent %d time</item>
        <item quantity="other">Hydrate while charging reminder sent %d times</item>
    </plurals>

</resources>
